Phase 0 spike day 4: SDK validated; first R1 collision found in autoconf
What landed today (2026-05-20):

1. FVP fully validated. Booted TF-A -> EDK2 UEFI -> FreeBSD EFI loader
   to CheriBSD boot menu. Confirmed firmware + image work end-to-end.
   Stopped before full kernel boot (FVP is ~30-60x slower than real
   time; full boot to shell ~20 min wall-clock; not on critical path).

2. Cross-compile smoke (tests/integration/hello-cheri/): SDK produces
   conformant Morello purecap ELF. Flags: 0x10000 purecap; .note.cheri
   with NT_CHERI_GLOBALS_ABI=PCREL, NT_CHERI_TLS_ABI=MORELLO_MIXED.

3. MOJO patches confirmed not publicly available. Probed GitHub
   (mojo-jvm, UoM-MOJO, CTSRD-CHERI/openjdk-*, Soteria-Research) plus
   git.morello-project.org — all 404 or unreachable. Pivoted to vanilla
   OpenJDK 17u + our own minimal patch series. Better for paper novelty
   anyway (our contribution boundary stays clean).

4. scripts/build_jdk.sh hardened: auto-detect Boot JDK 17, use clang
   toolchain, push --sysroot= into --with-extra-cflags/ldflags so
   autoconf's link tests actually find Scrt1.o / libc / libgcc.
   BUILD_CC/BUILD_CXX passed as positional autoconf args (env vars
   are explicitly ignored by OpenJDK 17u configure).

5. FIRST REAL R1 COLLISION at make/autoconf/platform.m4:705. OpenJDK
   asserts sizeof(int*)*8 == OPENJDK_TARGET_CPU_BITS. On Morello
   purecap sizeof(int*)==16 (128-bit cap) but target is "aarch64"
   (64-bit). docs/05 §5 has the empirical evidence and a candidate
   patch. This is patches/openjdk-jdk17/0002-platform-accept-cheri-
   cap-ptr-size.patch in the series file.

This is exactly the spike day 7-9 finding the risk register expected:
mechanical, not structural. Phase 1 work continues by replaying the
build, applying patches per first-failure-encountered, expanding the
patch series.

Apt installs on bc@hasee (sudo password supplied by user): ninja-build,
libtool-bin, libarchive-dev, openjdk-17-jdk-headless, clang. All build
artifacts 